Fixes grid layout issues. Improves content cards.
* To avoid API mismatches the current start implementation of
the content cards has been updated to already use translations.
* Grid layout was fixed in all instances, after re-reading the
elm-mdl grid documentation and the amount of columns per device.
* minor style adjustments.
* Tab-width 100% has been removed because it caused issues with
displayment tab entries on small screens.

--- a/carna-ui/src/styles.css
+++ b/carna-ui/src/styles.css
@@ -99,9 +99,11 @@
 }
 /* hack strange spacing away (incorrect calc) */
 .mdl-layout__tab-bar{
-    width:100%!important;
+    /* width:100%!important; */
 }
 .content-card-body-wrap{
     color: black!important;
-
+}
+.content-card{
+    width:90%!important;
 }
